--- a/Html-Pages/form.html
+++ b/Html-Pages/form.html
@@ -85,7 +85,7 @@
                     <legend >On-Duty Form</legend>
                 <input type="text" placeholder="Student Name" maxlength="20" size="20" required><br>
                 <input type="text" placeholder="Student Roll Number" required maxlength="20" size="20"><br>
-                <input type="number" placeholder="Student Phone Number" pattern="[6-9]{1}[0-9]{9}" required><br>
+                <input type="number" placeholder="Student Phone Number" pattern="[6-9]{1}[0-9]{9}" maxlength="10" size="10" required><br>
                 <input type="email" placeholder="Student Email I'd" autocomplete="off" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required><br>
                 <label for='Dept' style="font-family: 'Courier New', Courier, monospace;color: white;"><b>Select Your Department</b></label>
                 <select name="Dept" id="Dept" >
